# spf-validator

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  spf-validator.py  spf_validator.py
.github/workflows/: test-release.yaml  tests.yaml
src/spf_validator/: validator.py
tests/: test_validator.py
