[project]
name = "spf_validator"
version = "0.0.1"
authors = [
  { name="Frank Corso", email="frank@frankcorso.me" },
]
description = "Validates Sender Policy Framework (SPF) records."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
dependencies = [
    "dnspython==2.4.2"
]
keywords = ["spf", "sender policy framework", "email"]

[project.urls]
"Repository" = "https://github.com/fpcorso/spf-validator"

[build-system]
requires = ['setuptools>=42']
build-backend = 'setuptools.build_meta'